--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+e2fsprogs (1.46.2-1~bpo10+1) buster-backports; urgency=medium
+
+  * Rebuild for buster-backports.
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Thu, 11 Mar 2021 09:02:02 -0500
+
 e2fsprogs (1.46.2-1) unstable; urgency=medium
 
   * New upstream release
