--- a/tests/m_meta_bg/expect.1
+++ b/tests/m_meta_bg/expect.1
@@ -1,3 +1,4 @@
+128-byte inodes cannot handle dates beyond 2038 and are deprecated
 Creating filesystem with 131072 1k blocks and 32768 inodes
 Superblock backups stored on blocks: 
 	1025, 3073, 5121, 7169, 9217, 25601, 27649, 50177, 82945, 128001
