--- a/tests/m_root_owner/expect.1
+++ b/tests/m_root_owner/expect.1
@@ -1,3 +1,4 @@
+128-byte inodes cannot handle dates beyond 2038 and are deprecated
 Creating filesystem with 1024 1k blocks and 128 inodes
 
 Allocating group tables:    done                            
