--- a/tests/m_std/expect.1
+++ b/tests/m_std/expect.1
@@ -1,3 +1,4 @@
+128-byte inodes cannot handle dates beyond 2038 and are deprecated
 Creating filesystem with 65536 1k blocks and 16384 inodes
 Superblock backups stored on blocks: 
 	8193, 24577, 40961, 57345
