--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,31 @@
+e2fsprogs (1.46.4~rc1-1) unstable; urgency=medium
+
+  * New upstream release
+  * Mke2fs now creates 256 byte inodes by default for all non-GNU Hurd
+    file systems.   (Previously small file systems would be created
+    using 128 byte inodes.)
+  * The bigalloc feature is now considered supported when the cluster
+    size is no more than 16 times the block size.
+  * E2fsck now checks to make sure directory entries do not reference
+    internal quota inodes.
+  * E2image now includes the quota inodes when creating file system image,
+    since they are part of the file system metadata.
+  * E2fsck now properly accounts the quota usage of the project quota file.
+  * Fix a regression so mke2fs can create a file system into non-existent
+    file (Closes: #992094)
+  * Fix mke2fs to correctly create Posix ACL's on big-endian systems when
+    copying files from a directory hierarchy.
+  * Fix FTBFS caused by test failures on big-endian systems.
+    (Closes: #991922)
+  * Fix FTBFS on GNU Hurd
+  * Use WantedBy=multi-user.target in e2scrub_reap.service.
+    (Closes: #991349)
+  * Updated and clarified the resize2fs man pages.  (Closes: #979411)
+  * Update Czech, Dutch, French, Polish, Portuguese, and Swedish
+    translations.
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Sun, 15 Aug 2021 19:37:36 -0400
+
 e2fsprogs (1.46.3-1) experimental; urgency=medium
 
   * New upstream release
@@ -60,7 +88,7 @@ e2fsprogs (1.46.2-1) unstable; urgency=medium
     contain a pathname (instead of only working when writing a file or
     creating a symlink in the current directory).
   * When resizing a small file systems to a super-large file system size,
-    avoid issuing some scary bitmap operation warnings.  
+    avoid issuing some scary bitmap operation warnings.
   * Improved error checking in the fast commit replay code in e2fsck.
   * Updated and clarified the chattr man page.
   * Update the Spanish translation from the translation project.
