debian: bump debian version to rebuild with proper schroot
For unknown reasons "dgit gbp-buildpackage" failed to use the proper
build schroot, and so we need to bump the debian version to
1.46.5-2~bpo11+2 so we can build using "gbp buildpackage" directly,
and then upload without using dgit.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+e2fsprogs (1.46.5-2~bpo11+2) bullseye-backports; urgency=medium
+
+  * Rebuild without using digt so that the build schroot *actually* gets
+    used.  (Closes: #1003583)
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Wed, 12 Jan 2022 12:31:42 -0500
+
 e2fsprogs (1.46.5-2~bpo11+1) bullseye-backports; urgency=medium
 
   * Rebuild for bullseye-backports.
