--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+e2fsprogs (1.46.6~rc0-1) unstable; urgency=medium
+
+  * Trial upstream release for 1.46.6
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Thu, 01 Sep 2022 10:47:58 -0400
+
 e2fsprogs (1.46.5-1) unstable; urgency=medium
 
   * New upstream release
