--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,14 @@ e2fsprogs (1.46.6~rc1-1) unstable; urgency=medium
 
  -- Theodore Y. Ts'o <tytso@mit.edu>  Mon, 12 Sep 2022 08:27:55 -0400
 
+e2fsprogs (1.46.5-2) unstable; urgency=medium
+
+  * Fix build on GNU/kFreeBSD (caused by the fact that the Debian port has
+    an ancient version of coreutils, so the timeout program doesn't support
+    the -v option.
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Mon, 03 Jan 2022 23:48:13 -0500
+
 e2fsprogs (1.46.5-1) unstable; urgency=medium
 
   * New upstream release
