Update version tag to 1.47.1-rc1 for test builds
Also add Debian dependencies for libarchive-dev and change the
dependency from libfuse-dev to libfuse3-dev.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+e2fsprogs (1.47.1~rc1-1) experimental; urgency=medium
+
+  * New upstream version
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Sun, 21 Apr 2024 23:58:04 -0400
+
 e2fsprogs (1.47.0-2.4) unstable; urgency=medium
 
   * Non-maintainer upload.
