--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,77 @@
-e2fsprogs (1.47.1~rc1-1) experimental; urgency=medium
+e2fsprogs (1.47.1~rc1-1) unstable; urgency=medium
 
   * New upstream version
-
- -- Theodore Y. Ts'o <tytso@mit.edu>  Sun, 21 Apr 2024 23:58:04 -0400
+  * Add support for post-2038 timestamps on platforms with 64-bit time_t.
+  * Mke2fs -d can now support an input tar file if the libarchive library
+    is available.
+  * Install a udev rule to inihibit ext4 file systesm from being
+    automounted by udisks.
+  * Debugfs's 'hash' command has been enhanced to use the hash seed and
+    algorithm from a superblock if a file system is opened and to display
+    the hash seed and algorithm if the -v flag is given.
+  * Teach mke2fs with a new extended options, root_perms, which overrides
+    the permissions for the root directory for the new file system.
+  * Preserve any error indicator in the superblock when replaying the
+    journal so that a subsequent fsck can repair the file system afterwards.
+  * Fix potential mke2fs failures when creating a file system with an
+    orphan file when the storage device has a previous file system and
+    does not support discard/trim commands.
+  * E2fsck will clear the orphan_present feature silently in preen mode.
+  * Fix potential checksum failures when performing an online resize when
+    the mounted file system is actively modifying the superblock.
+  * Fix a bug where a checksum failure in an htree directory can cause
+    e2fsck's preen mode to abort unnecessarily.
+  * Fix e2fsck's handling of an invalid symlink in an inline_data
+    directory.
+  * Fix e4crypt from issuing a spurious "success" error message when
+    trying to set a policy on a non-directory.
+  * Fix a potential infinite loop in debugfs's logdump command in some
+    edge cases.
+  * Fix e2fsck to correctly update quota usage after optimizing
+    directories or deleting corrupted inodes.
+  * Fix fuse2fs so that directories are created with the correct
+    permissions instead of having the other and group write permissions
+    masked off.
+  * Fix a potential e2fsck divide by zero crash caused by a maliciously
+    fuzzed file system.
+  * Fix dumpe2fs to report free block ranges correctly for bigalloc file
+    file systems.
+  * Fix resize2fs where resizing a bigalloc file system can result in the
+    free cluster count in the last block group and the total free clusters
+    count to be incorrect.
+  * Avoid spurious e2scrub failures caused by trying to scrub file
+    syustems that do not have the journal enabled, and by aborting scrub
+    runs while upgrading the e2fsprogs package
+  * Teach tune2fs to detect a file system which is mounted but is not
+    mentioned in the mount namespace where tune2fs is run by treating a
+    block device which is busy as if it is mounted.
+  * If tune2fs can't find the mountpoint for a file system which is
+    apparently mounted (perhaps because it's not present in the current
+    mount namespace) when attempting to set the label or UUID in the
+    superblock, fall back to the old method of modifying block device and
+    silence printing any error messages.
+  * If both the primary superblock and first block group's backup
+    superblock are corrupted, e2fsck will now try additional backup
+    superblocks if they are available.
+  * Avoid mke2fs from creating an invalid file system with an insufficient
+    number of inodes when creating a file system which is very small
+    (100k), a block size of 1k, and an inode size of 256 bytes.
+  * Fix a potential deadlock caused by e2fsck being run in Direct I/O mode
+    with the threading optimization enabled.
+  * Update and clarify various man pages.  (Closes: #1038286)
+  * Add support for SOURCE_DATE_EPOCH environment variable 
+  * Improve resize2fs's performance by eliminating extra cache flushes.
+  * Improve mke2fs's performance when zeroing a large number of inode
+    table blocks (when lazy inode table initialization is not enabled) by
+    batching calls to ext2fs_zero_blocks.
+  * Use a safe_getenv function for all calls to fetch the environment
+    variable in libext2fs.
+  * Upgrade fuse2fs to use fuse v3.
+  * Build the binaries using FORTIFY_SOURCE=3 for better hardening
+  * Add Romainian translation.
+  * Update Malay translation.
+  
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Fri, 26 Apr 2024 22:23:25 -0400
 
 e2fsprogs (1.47.0-2.4) unstable; urgency=medium
 
