--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,27 @@
+e2fsprogs (1.47.1~rc2-1) unstable; urgency=medium
+
+  * Update Chinese, Czech, French, Polish Romainian, Swedish, and
+    Ukrainian translations
+  * Fix libarchive support in mke2fs on mips64el (Closes: #1070042)
+  * Fix e2scrub when the "systemctl" package is installed instead of
+    systemd.  (Closes: #1070107)
+  * Update to standards 4.7.0
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Wed, 01 May 2024 00:50:49 -0400
+
+e2fsprogs (1.47.1~rc1-3) unstable; urgency=medium
+
+  * Remove duplicated work in release notes
+  * Fix resize2fs's calculation of free clusters in the last block group
+    for file systems larger than 4TB
+  * Fix FTBFS on Hurd caused by trying to install e2scrub's systemd unit
+    files which aren't built since e2scrub isn't supported on Hurd
+  * Don't build mke2fs with libarchive support on mips64el since a bug in
+    libarchive only on that architecture causes a FTBFS due to the
+    regression test suite failing.  (See Debian Bug 1070042 for more details)
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Mon, 29 Apr 2024 21:57:42 -0400
+
 e2fsprogs (1.47.1~rc1-1) unstable; urgency=medium
 
   * Re-enable metadata_csum_seed and orphan_file by default now that
