debian: fix some typos in debian/changelog
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,8 @@ e2fsprogs (1.47.2~rc1-1) unstable; urgency=medium
     suitable for pre-1995 1.2 version kernels and a typo will just end up
     confusing the user and leaving them with a file system missing most
     modern ext4 features, including no support for on-line resizing and no
-    support for post-2038 timestamps.   Closes: #1086603)
-  * Add support for gnu.translator extended attrbitues in tar files fed to
+    support for post-2038 timestamps.   (Closes: #1086603)
+  * Add support for gnu.translator extended attrbutes in tar files fed to
     mke2fs -d.
   * Avoid a spurious failure in badblocks when -n or -w is specified
     twice.  (Closes: #1087341)
