More release note updates for 1.47.2.
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+e2fsprogs (1.47.2~rc1-2) unstable; urgency=medium
+
+  * Fix fuseext2 transition to account for /usr-move (Closes: #1088838)
+  * Fix orphan_file support on big endian systems.
+  * Mke2fs will allow "-r 1" since fsarchiver uses it rather pointlessly
+  * Allow building e2fsprogs without libarchive-dev installed to make life
+    easier for bootstrapping for new Debian ports (Closes: #1078693)
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Tue, 03 Dec 2024 23:40:01 -0500
+
 e2fsprogs (1.47.2~rc1-1) unstable; urgency=medium
 
   * New upstream version
