e2fsck: clear the orphan_file while processing it
Previously, we cleared the orphan file after pass 5.  This was
unfortunate, because it means that the file system is left in a
corrupted state after running "e2fsck -E journal_only".  By fixing
this, we can also remove a spurious "Orpan file... is not clean"
report from e2fsck.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/tests/f_clear_orphan_file/expect.1
+++ b/tests/f_clear_orphan_file/expect.1
@@ -18,18 +18,6 @@ Clearing orphaned inode 28 (uid=0, gid=0, mode=0100644, size=0)
 Clearing orphaned inode 29 (uid=0, gid=0, mode=0100644, size=0)
 Clearing orphaned inode 30 (uid=0, gid=0, mode=0100644, size=0)
 Clearing orphaned inode 31 (uid=0, gid=0, mode=0100644, size=0)
-Pass 1: Checking inodes, blocks, and sizes
-Pass 2: Checking directory structure
-Pass 3: Checking directory connectivity
-Pass 4: Checking reference counts
-Pass 5: Checking group summary information
-Free inodes count wrong (2055, counted=2005).
-Fix? yes
-
-Orphan file (inode 12) block 0 is not clean.
-Clear? yes
-
-
-test_filesys: ***** FILE SYSTEM WAS MODIFIED *****
-test_filesys: 43/2048 files (2.3% non-contiguous), 1650/8192 blocks
-Exit status is 1
+Setting free inodes count to 2005 (was 2055)
+test_filesys: clean, 43/2048 files, 1650/8192 blocks
+Exit status is 0
