test: fix expect files which changed after EA bugfix
The logic bug which was fixed in commit 92b6e93936d7 ("e2fsck: fix
logic bug when there are no references...") resulted in some silent
fixes that were never logged, and in some cases, corruption that was
not cleaned up.   Fix the tests so that they pass as expected.

Fixes: 92b6e93936d7 ("e2fsck: fix logic bug when there are no references..."
Signed-off-by: Theodore Ts'o <tytso@mit.edu>
(cherry picked from commit ddd4f796d9dfdb80e5639ca8411e8e4891d3c7f1)

--- a/tests/f_ea_inode_disconnected/expect.1
+++ b/tests/f_ea_inode_disconnected/expect.1
@@ -2,6 +2,8 @@ Pass 1: Checking inodes, blocks, and sizes
 Pass 2: Checking directory structure
 Pass 3: Checking directory connectivity
 Pass 4: Checking reference counts
+Regular filesystem inode 13 has EA_INODE flag set. Clear? yes
+
 Unattached inode 13
 Connect to /lost+found? yes
 
