--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+e2fsprogs (1.47.3~rc2-1) experimental; urgency=medium
+
+  * Add a lockfile command-line option to fuse2fs which is useful for
+    scripts that need to know when fuse2fs is done modifying the file system
+    after it is unmounted.
+  * Fix mke2fs -d when importing large directories (Closes: #1106854)
+  * Fix indention problem in the man page for mke2fs
+  * Fix a (hard to reproduce) extent tree corruption bug which could be
+    triggered by resize2fs or fuse2fs if the extent tree was especially complex
+  * Fix error path handling in fuse2fs when servicing an op_create request.
+  * Fix spurious warnings from fuse2fs while servicing an op_fallocate request.
+  * Fix fuse2fs to correctly translate system errors from libext2fs to the
+    negative error codes expected by the FUSE kernel driver.
+  * Update Czech, Chinese, Dutch, French, Portuguese, Polish, Romainian,
+    Serbian, Spanish, Swedish, and Ukrainian translations.
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Fri, 13 Jun 2025 14:24:46 -0400
+
 e2fsprogs (1.47.3~rc1-1) experimental; urgency=medium
 
   * Mke2fs -d can now copy the fs-verity metadata and chattr flags
@@ -61,6 +79,55 @@ e2fsprogs (1.47.3~rc1-1) experimental; urgency=medium
   * Update Dutch, Malay, Portuguese, and Serbian translations.
 
  -- Theodore Y. Ts'o <tytso@mit.edu>  Wed, 28 May 2025 08:50:19 -0400
+
+e2fsprogs (1.47.2-3) unstable; urgency=medium
+
+  * Fix a typo in fuse2fs.postrm which breaks /usr-move mitigation
+    (Closes: #1107595)
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Tue, 10 Jun 2025 14:59:29 -0400
+
+e2fsprogs (1.47.2-2) unstable; urgency=medium
+
+  * Fix integer overflow bug which resulted in fuse2fs failing to delete
+    very large files (Closes: #1106241)
+  * Fix an extent corruption bug which in very rare cases could result in
+    data loss when resizing a file system or when fuse2fs is operating on
+    that file system
+  * Various man page cleanups
+  * Add a Built-Using field to the e2fsck-static man page to honor a LGPL
+    requirement documenting which version of glibc was used to build the
+    e2fsck.static binary (Closes: #1106799)
+  * Remove the physical address of the FSF from the debian/copyright
+    file, addressing a Lintian warning.
+  * Fix bug in debugfs when user passes invalid arguments to the
+    e2freefrag command
+  * Add range checks to "mke2fs -E <desc_size>"
+  * Check to make the invalid value of 0 is not passed to "e2freefrag -c"
+  * Fix "e2fsck -E unshare_blocks" to clear the shared_blocks flag when
+    there are no shared blocks to clear
+  * Fix mke2fs to disallow the verity feature without extents
+  * Fix fuse2fs to reject renameat2 RENAME_EXCHANGE/RENAME_WHITEOUT
+    instead of treating the request (wrongly) as a normal rename
+  * Fix fuse2fs to set the timestamps for the new inode created by a mkdir
+    or symlink request
+  * Fix fuse2fs to clamp the timestamps written to the file system to fix
+    a Y2038 bug as tested by fstests generic/402
+  * Fix fuse2fs to handle the encoding of POSIX acl's correctly
+  * Fix fuse2fs to return EOPNOTSUPP when a fallocate(2) mode is not supported
+  * Fix fuse2fs to refuse mounting a file system with file system features
+    that it doesn't know how to handle
+  * Fix debugfs's dump and rdump commands to avoid looping forever when
+    it runs across an I/O error or corupt filesystem metadata.
+  * Fix debugfs's dirsearch command on big-endian systems.
+  * Optimize ext2fs_extent_set_bmap() to avoid fragmenting the extent
+    tree.  This fixes a problem where resize2fs is trying to relocate
+    all of the blocks in a file leading to the extent tree doubling in
+    size, and potentially leading to a corrupted extent tree.
+  * Fix "e2fsck -n" to not abort when it trips across an EA inode which
+    is not referenced by any inodes in the file system.
+
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Mon, 09 Jun 2025 20:49:10 -0400
 
 e2fsprogs (1.47.2-1) unstable; urgency=medium
 
